Fixed SOTW Progress Not Showing

--- a/themes/neo.css
+++ b/themes/neo.css
@@ -694,7 +694,7 @@ h1{
 	margin: 0;
     width: 0;
 	height: 100%;
-    background-color: var(--bg-color-alt);
+    background-color: var(--border-color);
 }
 
 .slidecontainer {
